--- a/TimedRewards/src/config.yml
+++ b/TimedRewards/src/config.yml
@@ -1,6 +1,7 @@
 # TimedRewards by ImABradley
 # Spigot: https://www.spigotmc.org/members/imabradley.292138/
 #
+# config.yml
 # Plugin Version: 0.1
 # MySQL support should hopefully be in 0.2.
 
