--- a/TimedRewards/src/config.yml
+++ b/TimedRewards/src/config.yml
@@ -3,7 +3,7 @@
 #
 # config.yml
 # Plugin Version: 0.1
-# MySQL support should hopefully be in 0.2.
+# MySQL support will hopefully be in 0.2.
 
 
 # Sends anonymous information to mcstats.org. This allows me to see how many servers are using my plugin. (That's all!)
@@ -18,6 +18,7 @@ npc:
   names:
     - '&a&lCarl the Creeper'
     - '&bThe Delivery Man'
+
 
 menus:
   rewards:
@@ -50,6 +51,7 @@ menus:
         # Commands which are ran when a player successfully claims a reward. (Messages are already sent, see messages.yml to change them)
         claim-rewards:
           - 'eco give {PLAYER} 1000'
+          - 'tr msg {PLAYER} &7[&6TimedRewards&7] You have claimed the daily reward!'
       weekly:
         id: 266
         amount: 1
@@ -61,6 +63,7 @@ menus:
         slot: 21
         claim-rewards:
           - 'eco give {PLAYER} 5000'
+          - 'tr msg {PLAYER} &7[&6TimedRewards&7] You have claimed the weekly reward!'
       monthly:
         id: 264
         amount: 1
@@ -74,4 +77,5 @@ menus:
         permission: timedrewards.monthly
         claim-rewards:
           - 'eco give {PLAYER} 10000'
+          - 'tr msg {PLAYER} &7[&6TimedRewards&7] You have claimed the monthly reward!'
   player: [] # TODO
