--- a/TimedRewards/src/messages.yml
+++ b/TimedRewards/src/messages.yml
@@ -7,3 +7,4 @@ prefix: '&7[&6TimedRewards&7]'
 
 
 invalid-arguments: '{prefix} Invalid arguments, please use: &e{args}&7.'
+no-claim-permission: '{prefix} You do not have permission to claim the &e{reward} &7reward.'
